[package]
name = "opcua_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
async-opcua = { version = "0.18", features = ["server"] }
async-opcua-nodes = "0.18"
rand = { version = "0.8", features = ["small_rng"] }
tokio = { version = "1.0", features = ["full"] }
signal-hook = "0.3"
env_logger = "0.11"
log = "0.4"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
crossterm = "0.28"
chrono = "0.4"
parking_lot = "0.12"
tiny_http = "0.12"

[profile.release]
opt-level = 3
lto = true
